# samaya

./: .clang-format  .clang-tidy  .clangd  .gitignore  CONTRIBUTING.md  README.md  meson.build
.github/workflows/: build_flatpak.yml
.zed/: tasks.json
build-aux/flatpak/: README.md  io.github.redddfoxxyy.samaya.json
data/: io.github.redddfoxxyy.samaya.desktop.in  io.github.redddfoxxyy.samaya.gschema.xml  io.github.redddfoxxyy.samaya.metainfo.xml.in  meson.build
po/: POTFILES.in  de.po  et.po  fr.po  hi.po  ko.po  mr.po  ru.po  samaya.pot  tr.po  vi.po
src/: main.c  meson.build  preferences-dialog.ui  samaya-application.c  samaya-application.h  samaya-preferences-dialog.c  samaya-preferences-dialog.h  samaya-session.c  samaya-session.h  samaya-style.css  samaya-timer.c  samaya-timer.h  samaya-utils.h  samaya-window.c  samaya-window.h  samaya-window.ui  samaya.gresource.xml  session.c  session.h  timer.c  timer.h
